--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "@nsfilho/unique",
     "main": "build/index.js",
     "type": "build/index.d.ts",
     "license": "GPL-3.0",
@@ -53,5 +54,6 @@
             "eslint --fix",
             "prettier --write"
         ]
-    }
+    },
+    "version": "0.0.0"
 }
