--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "type": "git",
         "url": "https://github.com/nsfilho/uniqueExecution"
     },
+    "homepage": "https://nsfilho.github.io/uniqueExecution/index.html",
     "devDependencies": {
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
@@ -33,6 +34,7 @@
         "eslint-import-resolver-typescript": "^2.2.1",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "gh-pages": "^3.1.0",
         "husky": "^4.2.5",
         "jest": "^26.4.2",
         "lint-staged": "^10.2.13",
@@ -47,6 +49,8 @@
         "format": "prettier --write src/**/*.{ts,tsx,css,js,jsx} package.json",
         "build": "tsc",
         "docs": "typedoc",
+        "prepages": "yarn docs",
+        "pages": "gh-pages -d docs",
         "test": "jest --detectOpenHandles",
         "jest": "yarn test",
         "release": "standard-version"
