--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0",
     "private": false,
     "dependencies": {
-        "moment": "^2.27.0",
+        "dayjs": "^1.8.34",
         "nanoid": "^3.1.12"
     },
     "author": {
